added lots of things
