# service/api/login.go
@@ -1,9 +1,7 @@
 package api
 
 import (
-	"database/sql"
 	"encoding/json"
-	"errors"
 	"net/http"
 	"wasaText/service/api/reqcontext"
 	"wasaText/service/structs"
@@ -20,26 +18,34 @@ func (rt *_router) doLogin(w http.ResponseWriter, r *http.Request, ps httprouter
 		BadRequest(w, err, ctx, "Error decoding JSON")
 		return
 	}
-	//check username
-	dbUser, err := rt.db.SearchUser(user.Username)
+	// Check if the patter of the username respect the regex
+	if !user.IsValid() {
+		BadRequest(w, err, ctx, "Invalid username")
+		return
+	}
+	exists, err := rt.db.CheckUsername(user.Username)
 	if err != nil {
-		if errors.Is(err, sql.ErrNoRows) && user.IsValid() {
-			//create user if it doesn't exists
-			dbUser, err = rt.db.CreateUser(user.Username)
-			if err != nil {
-				InternalServerError(w, err, ctx)
-				return
-			}
-			w.WriteHeader(http.StatusCreated)
-		} else {
+		InternalServerError(w, err, ctx)
+	}
+	if !exists {
+		dbUser, err := rt.db.CreateUser(user.Username)
+		if err != nil {
 			InternalServerError(w, err, ctx)
 			return
 		}
-
+		user = dbUser
+	} else {
+		dbUser, err := rt.db.SearchUser(user.Username)
+		if err != nil {
+			InternalServerError(w, err, ctx)
+			return
+		}
+		user = dbUser
 	}
+
 	//Response
 	w.Header().Set("content-type", "application/json")
-	if err := json.NewEncoder(w).Encode(dbUser.ID); err != nil {
+	if err := json.NewEncoder(w).Encode(user); err != nil {
 		InternalServerError(w, err, ctx)
 		return
 	}
