# service/api/search-user.go
@@ -1,10 +1,9 @@
 package api
 
 import (
-	"database/sql"
 	"encoding/json"
-	"errors"
 	"net/http"
+	"regexp"
 
 	"wasaText/service/api/reqcontext"
 	"wasaText/service/structs"
@@ -13,38 +12,31 @@ import (
 )
 
 // rt.router.GET("/profiles", rt.wrap(rt.searchUser, true))
-func (rt *_router) searchUser(w http.ResponseWriter, r *http.Request, ps httprouter.Params, ctx reqcontext.RequestContext) {
-	var reqUser structs.User
+func (rt *_router) searchUsers(w http.ResponseWriter, r *http.Request, ps httprouter.Params, ctx reqcontext.RequestContext) {
 
-	//read request body
-	err := json.NewDecoder(r.Body).Decode(&reqUser)
-	if err != nil {
-		BadRequest(w, err, ctx, "Error decoding JSON")
+	// Get the search query from the request
+	query_search := r.URL.Query().Get("username")
+	validQuerySearch := regexp.MustCompile(`^[a-z0-9]{1,13}$`)
+	if !validQuerySearch.MatchString(query_search) {
+		http.Error(w, "Bad Request", http.StatusBadRequest)
 		return
 	}
-	//check provided username
-	if reqUser.Username == "" {
-		BadRequest(w, errors.New("username is required"), ctx, "Missing username")
-		return
-	}
+
 	//check username in database
-	dbUser, err := rt.db.SearchUser(reqUser.Username)
+	dbUsers, err := rt.db.SearchUsers(query_search)
 	if err != nil {
-		//user not found
-		if errors.Is(err, sql.ErrNoRows) {
-			http.Error(w, "User does not exist", http.StatusNotFound)
-			return
-		}
-		//any other error
-		InternalServerError(w, err, ctx)
+		ctx.Logger.Error("Error searching users ", err)
+		http.Error(w, "Error searching users", http.StatusInternalServerError)
 		return
 	}
+	users := make([]structs.User, len(dbUsers))
+	copy(users, dbUsers)
 
 	//set response header for json content
 	w.Header().Set("Content-Type", "application/json")
 	w.WriteHeader(http.StatusOK)
 	//encode user in json
-	if err = json.NewEncoder(w).Encode(dbUser); err != nil {
+	if err = json.NewEncoder(w).Encode(users); err != nil {
 		ctx.Logger.WithError(err).Error("Error encoding response")
 		http.Error(w, "Internal Server Error", http.StatusInternalServerError)
 		return
