# service/structs/message.go
@@ -1,9 +1,11 @@
 package structs
 
 type Message struct {
-	MsgID     int    `json:"msgID"`
-	ConvoID   int    `json:"convoID"`
-	SenderID  int    `json:"senderID"`
-	Content   string `json:"content"`
-	Timestamp string `json:"timestamp"` // Formato `RFC3339` (ISO 8601)
+	MsgID         int    `json:"msgID"`
+	ConvoID       int    `json:"convoID"`
+	SenderID      int    `json:"senderID"`
+	Content       string `json:"content"`
+	Timestamp     string `json:"timestamp"` // Formato `RFC3339` (ISO 8601)
+	CheckSent     int    `json:"sent"`
+	CheckReceived int    `json:"received"`
 }
